@@ -1,8 +1,8 @@
 # --
 # Kernel/Output/HTML/ArticleComposeCrypt.pm
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: ArticleComposeCrypt.pm,v 1.21 2011/06/03 03:38:01 dz Exp $
+# $Id: ArticleComposeCrypt.pm,v 1.17.2.1 2009/12/23 22:28:09 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -18,7 +18,7 @@ use Mail::Address;
 use Kernel::System::Crypt;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.21 $) [1];
+$VERSION = qw($Revision: 1.17.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -81,7 +81,7 @@ sub Run {
     }
 
     # add crypt options
-    my $List = $Self->{LayoutObject}->BuildSelection(
+    my $List = $Self->{LayoutObject}->OptionStrgHashRef(
         Data       => \%KeyList,
         Name       => 'CryptKeyID',
         SelectedID => $Param{CryptKeyID}
@@ -133,24 +133,14 @@ sub Data {
                 if ( $DataRef->{Expires} ) {
                     $Expires = "[$DataRef->{Expires}]";
                 }
-
-                my $Status = '';
-                $Status = '[' . $DataRef->{Status} . ']';
-                if ( $DataRef->{Status} eq 'expired' ) {
-                    $Status = '[WARNING: EXPIRED KEY]';
-                }
-                elsif ( $DataRef->{Status} eq 'revoked' ) {
-                    $Status = '[WARNING: REVOKED KEY]';
-                }
+                $KeyList{"PGP::Detached::$DataRef->{Key}"}
+                    = "PGP-Detached: $DataRef->{Key} $Expires $DataRef->{Identifier}";
 
                 # disable inline pgp if rich text is enabled
                 if ( !$Self->{LayoutObject}->{BrowserRichText} ) {
                     $KeyList{"PGP::Inline::$DataRef->{Key}"}
-                        = "PGP-Inline: $Status $DataRef->{Key} $Expires $DataRef->{Identifier}";
+                        = "PGP-Inline: $DataRef->{Key} $Expires $DataRef->{Identifier}";
                 }
-
-                $KeyList{"PGP::Detached::$DataRef->{Key}"}
-                    = "PGP-Detached: $Status $DataRef->{Key} $Expires $DataRef->{Identifier}";
             }
         }
 
@@ -165,8 +155,8 @@ sub Data {
                 if ( $DataRef->{EndDate} ) {
                     $EndDate = "[$DataRef->{EndDate}]";
                 }
-                $KeyList{"SMIME::Detached::$DataRef->{Filename}"}
-                    = "SMIME-Detached: $DataRef->{Filename} $EndDate $DataRef->{Email}";
+                $KeyList{"SMIME::Detached::$DataRef->{Hash}"}
+                    = "SMIME-Detached: $DataRef->{Hash} $EndDate $DataRef->{Email}";
             }
         }
 
